Integer.valueOf, not new Integer()